--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"dotenv": "16.4.5",
 		"ejs": "3.1.10",
 		"express": "4.21.0",
+		"mssql": "11.0.1",
 		"mysql2": "3.11.3"
 	},
 	"devDependencies": {
