--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,10 @@ DB_PORT=
 DB_USER=
 DB_PWD=
 DB_NAME=
+
+
+AZURE_SQL_SERVER=
+AZURE_SQL_DATABASE=
+AZURE_SQL_PORT=
+AZURE_SQL_USER=
+AZURE_SQL_PASSWORD=
