--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"author": "hloc2605",
 	"license": "ISC",
 	"dependencies": {
+		"bcrypt": "^5.1.1",
 		"body-parser": "^1.20.3",
 		"dotenv": "16.4.5",
 		"ejs": "3.1.10",
