--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-	"type": "module",
 	"name": "web-server",
 	"version": "1.0.0",
 	"description": "starter web server using nodejs",
@@ -14,15 +13,10 @@
 	"author": "hloc2605",
 	"license": "ISC",
 	"dependencies": {
-		"bcrypt": "^5.1.1",
-		"body-parser": "^1.20.3",
 		"dotenv": "16.4.5",
 		"ejs": "3.1.10",
 		"express": "4.21.0",
-		"knex": "^3.1.0",
-		"mssql": "^11.0.1",
-		"mysql2": "3.11.3",
-		"tedious": "^18.6.1"
+		"mysql2": "3.11.3"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.7"
