--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"body-parser": "^1.20.3",
 		"dotenv": "16.4.5",
 		"ejs": "3.1.10",
-		"express": "4.21.0",
+		"express": "^4.21.2",
 		"express-ejs-layouts": "^2.5.1",
 		"express-session": "^1.18.1",
 		"knex": "^3.1.0",
